# tesseric

./: .dockerignore  .env.example  .gitignore  Claude.md  DEBUG_ARCHITECTURE_TOPOLOGY.md  Dockerfile  ENGINEERING_SHOWCASE_ROADMAP.md  LICENSE  NEO4J_INTEGRATION_HANDOVER.md  PHASE1_OPTIMIZATION_RESULTS.md  README.md  SECURITY_AUDIT_REPORT.md  SPEED_OPTIMIZATION_GUIDE.md  create_test_diagram.py  dev.sh  railway.json  test-architecture-description.txt
.github/: LAST_ACTIVITY.txt  dependabot.yml
backend/: .dockerignore  .railway-rebuild  Dockerfile  RATE_LIMITING_DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt  test_rate_limit.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  graph.py  health.py  metrics.py  review.py
backend/app/core/: config.py
backend/app/graph/: __init__.py  neo4j_client.py  service_parser.py
backend/app/middleware/: __init__.py  rate_limiter.py
backend/app/models/: analytics.py  graph.py  metrics.py  request.py  response.py
backend/app/services/: __init__.py  analytics_service.py  bedrock.py  image_processing.py  parsing.py  prompts.py  rag.py  storage.py
backend/app/utils/: exceptions.py  token_counter.py
backend/scripts/: cleanup_remediation_nodes.py
backend/tests/: __init__.py  conftest.py  performance_baseline.json  test_health.py  test_invalid_image_rejection.py  test_performance_baseline.py  test_review.py  test_scoring.py
docs/: tesseric-architecture-description.json  test-architectures.md
frontend/: .env.example  .env.production  README.md  REVIEW_SUBMISSION_EXAMPLE.tsx  package-lock.json  (+4 more)
(+80 files in other folders)
